
Changes:
- Moved multiple weapon blueprints into the rare category
- Added new sprites for Sylpheed Station and Ozma Station
- Random behind the scenes adjustments for stuff

Bugfixes:
- Ozma Station is no longer a freeport *twice* (don't ask how that works): only works on new saves, unfortunately, but it's not serious enough to make a new save over anyhow


0.9rc2
Bugfixes:
- Fixed Vril-related problems
- Fixed certain built-ins showing up as modular weapons


0.9rc1
Additions:
- Added 0.9 integration
- Added a unique industry to Sylpheed Station allowing it to tech-mine Preatorium remotely (and some lore-gibble preventing Preatorium from being colonized/looted)
- Added the Vetra-class kinetic bomber

Changes:
- Now uses and requires MagicLib; all old code which is included in MagicLib has been refactored and many old scripts have been removed


0.8.3 [Never released]
Additions:
- Sylphon fleets in the campaign now has a chance to upgrade their ships with Sylph Cores, if the submarket is available in their market
- Added a new line of hullmods for Sylph Cores; they can only be used on ships with a mounted Sylph Core:
	-- Advisor Subroutines: Provides tactical advice to the commander, increasing command point regeneration as long as the flagship also has this mod
- Added new visual steam effects on the Stricture and Condemnation
- Added oscillation visuals to the Vacuity and Disavowal PD

Changes:
- Adjusted the code for how Sylph Core installations are tracked; slightly better performance for new ships that install Sylph Cores (shouldn't be noticable below a couple of thousand ships, though, so it's no biggie)
- Split up the code for oscillating beams into separate scripts instead of using a single script for them all

Balancing:
- Lowered Largesse range from 900 to 800
- Sylphon Prototype Nullpoint Shield:
	-- Now increases shield upkeep by 75%
	-- Now halves shield arc for any ships who already have frontal shields